kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app-deployment
  labels:
    app: user-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      serviceAccountName: sa-migration
      # The init containers
      containers:
        - name: user-app
          image: shaplovdv/userapp:latest
          ports:
            - containerPort: 8000
