kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
spec:
  type: ClusterIP
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8000
